--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <p><strong>Why Choose Us?</strong></p>
             <ul>
                 <li>🏅 Limited Students: Only 15 students per batch</li>
+                <li>🌟 Smart Studying: Students will be taught through videos, projects and regular tests</li>
                 <li>🌟 Personal Attention: Focus on individual progress</li>
                 <li>📚 Free Extra Classes: Additional support available</li>
                 <li>🆘 Comprehensive Help: Assistance in other subjects as well</li>
@@ -38,6 +39,7 @@
             </ul>
             <p><strong>Additional Facility</strong>:</p>
             <p>🏠 Paying Guest Facility: Available if required</p>
+            <p>🏠 Tiffin Facility: Available if required</p>
             <p><strong>Contact for More Details</strong>:</p>
             <p>📞 Call or WhatsApp at 9733138301</p>
         </section>
