--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
             <p><strong>Why Choose Us?</strong></p>
             <ul>
-                <li>🏅 Limited Students: Only 15 students per batch</li>
+                <li>🏅 Limited Students: Only 12 students per batch</li>
                 <li>🌟 Smart Studying: Students will be taught through videos, projects and regular tests</li>
                 <li>🌟 Personal Attention: Focus on individual progress</li>
                 <li>📚 Free Extra Classes: Additional support available</li>
@@ -38,6 +38,7 @@
                 <li>End Date: 20th Feb 2025</li>
             </ul>
             <p><strong>Additional Facility</strong>:</p>
+            <p>🏠 Basic ameneties like hot water, washrooms and internet available</p>
             <p>🏠 Paying Guest Facility: Available if required</p>
             <p>🏠 Tiffin Facility: Available if required</p>
             <p><strong>Contact for More Details</strong>:</p>
