--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Study - Winter Coaching Classes</title>
+    <title>Success Eddge - Winter Coaching Classes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
             <p><strong>Why Choose Us?</strong></p>
             <ul>
                 <li>🏅 Limited Students: Only 12 students per batch</li>
-                <li>🌟 Smart Studying: Students will be taught through videos, projects and regular tests</li>
+                <li>🌟 Smart Studying: Students will also be taught through videos, projects and regular tests</li>
                 <li>🌟 Personal Attention: Focus on individual progress</li>
                 <li>📚 Free Extra Classes: Additional support available</li>
                 <li>🆘 Comprehensive Help: Assistance in other subjects as well</li>
