--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="banner">
-            <h2>Smart Study</h2>
+            <h2>Success Edge</h2>
             <p><strong>Subjects</strong>: Mathematics & Science</p>
             <p><strong>Fees</strong>:</p>
             <ul>
