--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <p><strong>Subjects</strong>: Mathematics & Science</p>
             <p><strong>Fees</strong>:</p>
             <ul>
-                <li>Mathematics: INR 1500 per month</li>
-                <li>Science: INR 1500 per month</li>
-                <li>Both Subjects: INR 2500 per month</li>
+                <li>Mathematics: INR 1000 per month</li>
+                <li>Physics: INR 1000 per month</li>
+                <li>Chemistry: INR 1000 per month</li>
+                <li>Three Subjects: INR 2500 per month</li>
             </ul>
             <p><strong>Why Choose Us?</strong></p>
             <ul>
